--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     implementation 'com.androidhuman.rxfirebase2:firebase-core:16.0.1.0'
     implementation 'com.androidhuman.rxfirebase2:firebase-database:16.0.1.1'
     implementation 'com.prof.rssparser:rssparser:2.0.4'
+    implementation 'com.android.support:multidex:1.0.1'
+
 
 
 
