--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,17 @@
 
             />
 
+        <activity
+            android:name="com.ltthuc.habit.ui.activity.categorydetail.CategoryDetailActivity"
+            android:label="@string/app_name"
+
+            android:theme="@style/TagFeedAppTheme.Dark"
+
+            android:windowSoftInputMode="adjustResize"
+
+            />
+        <activity android:name=".ui.activity.webview.WebViewActivity"/>
+
 
         <meta-data
             android:name="com.google.android.gms.version"
