--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,17 @@
             android:windowSoftInputMode="adjustResize"
 
             />
+
+        <activity
+            android:name="com.ltthuc.habit.ui.activity.viewer.ViewerActivity"
+            android:label="@string/app_name"
+
+            android:theme="@style/TagFeedAppTheme.Dark"
+
+            android:windowSoftInputMode="adjustResize"
+
+            />
+
         <activity android:name=".ui.activity.webview.WebViewActivity"/>
 
 
