--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ui.activity.TestActivity"
-            android:label="@string/title_activity_test"
-            android:theme="@style/AppTheme.NoActionBar">
 
-        </activity>
+
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -82,6 +78,11 @@
 
             android:theme="@style/TagFeedAppTheme.Dark"
             android:windowSoftInputMode="adjustResize"
+
+            />
+        <activity
+            android:name="com.ltthuc.habit.ui.activity.quotes.QuotesActivity"
+            android:theme="@style/DailyFeedAppTheme.Dark"
 
             />
 
