--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.ltthuc.habit.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
