--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,7 +143,7 @@ dependencies {
 
        implementation 'org.sufficientlysecure:html-textview:3.9'
     implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
-
+    implementation  'org.jsoup:jsoup:1.13.1'
 
 
 
