--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,6 +27,7 @@ ext {
     final stethoVersion = "1.5.0"
     final accountKitVersion = "4.37.0"
     final circleImageViewVersion = "2.1.0"
+    final roomVersion = "2.2.5"
 
     //firebase
     final firebaseCoreVersion = '16.0.0'
@@ -68,9 +69,9 @@ ext {
             ArchJava8            : "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version",
 
             // ROOM
-            Room                 : "androidx.room:room-runtime:$lifecycle_version",
-            RoomCompiler         : "androidx.room:room-compiler:$lifecycle_version",
-            RxRoom               : "androidx.room:room-rxjava2:$lifecycle_version",
+            Room                 : "androidx.room:room-runtime:$roomVersion",
+            RoomCompiler         : "androidx.room:room-compiler:$roomVersion",
+            RxRoom               : "androidx.room:room-rxjava2:$roomVersion",
 
 
 
