--- a/build.gradle
+++ b/build.gradle
@@ -5,17 +5,15 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11'
-        classpath 'io.fabric.tools:gradle:1.+'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath 'com.android.tools.build.jetifier:jetifier-processor:1.0.0-beta03'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
