--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,6 @@
 ext {
     androidMinSdkVersion = 21
-    androidTargetSdkVersion = 28
+    androidTargetSdkVersion = 29
     androidCompileSdkVersion = 28
 
     final lifecycle_version = '2.0.0-beta01'
@@ -13,11 +13,12 @@ ext {
     final rxAndroid = '2.0.1'
     final stetho = '1.4.2'
     final roundedImageView = '2.3.0'
-    final glide = '4.8.0'
+    final glide = '4.11.0'
+    final glideTransform = '4.1.0'
     final MPAndroidChart = 'v3.0.3'
     final QrGenerator = '2.4.0'
     final androidKTXVersion = '1.0.0-beta01'
-    final materialVersion = '1.0.0'
+    final materialVersion = '1.3.0-alpha01'
     final timberVersion = '1.0.1'
     final multipleDexVersion = '2.0.0'
     final mapUtilVersion = '0.5+'
@@ -117,6 +118,7 @@ ext {
             //Glide
             glide                : "com.github.bumptech.glide:glide:$glide",
             glideCompiler        : "com.github.bumptech.glide:compiler:$glide",
+            glideTransform       : "jp.wasabeef:glide-transformations:$glideTransform",
 
             // Persian Date Picker
             datePicker           : ":datepicker",
