--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
-apply plugin: 'io.fabric'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
 
 android {
 
@@ -22,7 +20,7 @@ android {
 
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.applifehack.knowledge"
         minSdkVersion rootProject.androidMinSdkVersion
@@ -37,16 +35,14 @@ android {
         javaMaxHeapSize "2g"
     }
 
-    dataBinding {
-        enabled true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    androidExtensions {
-        experimental = true
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     lintOptions {
@@ -65,6 +61,7 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/core_release.kotlin_module'
+        exclude 'mozilla/public-suffix-list.txt'
     }
 
     flavorDimensions "default"
@@ -132,7 +129,7 @@ dependencies {
     implementation appDependencies.facebook.stetho_okhttp3
     implementation appDependencies.circleImageView
     implementation 'com.makeramen:roundedimageview:2.2.1'
-    implementation 'com.github.rubensousa:gravitysnaphelper:2.2.0'
+    implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
     // Dagger
     implementation appDependencies.dagger
     implementation appDependencies.daggerAndroid
@@ -147,7 +144,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.0.4'
     implementation 'com.androidhuman.rxfirebase2:firebase-core:16.0.1.0'
     implementation 'com.androidhuman.rxfirebase2:firebase-database:16.0.1.1'
-    implementation 'com.prof.rssparser:rssparser:2.0.4'
+    implementation 'com.prof18.rssparser:rssparser:6.0.5'
     implementation 'com.android.support:multidex:1.0.1'
     implementation 'androidx.browser:browser:1.3.0-alpha04'
     //room
@@ -170,8 +167,8 @@ dependencies {
        implementation 'org.sufficientlysecure:html-textview:3.9'
     implementation 'com.google.firebase:firebase-dynamic-links-ktx:19.1.0'
     implementation  'org.jsoup:jsoup:1.13.1'
-    implementation("com.github.skrapeit:skrape.it:master-SNAPSHOT")
-    implementation 'com.prof.youtubeparser:youtubeparser:3.0.0'
+    implementation 'it.skrape:skrapeit:1.2.2'
+    implementation 'com.prof18.youtubeparser:youtubeparser:4.0.1'
 
 
 
@@ -182,5 +179,7 @@ repositories {
         url "https://jitpack.io"
     }
     mavenCentral()
+    jcenter()
 
 }
+apply plugin: 'com.google.gms.google-services'
