--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: 'dependencies.gradle'
 buildscript {
-    ext.kotlin_version = '1.3.20'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
+        maven { url = uri("https://oss.sonatype.org/content/repositories/snapshots/") }
         jcenter()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha11'
-        classpath 'io.fabric.tools:gradle:1.+'
-        classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'com.android.tools.build.jetifier:jetifier-processor:1.0.0-beta03'
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
+        classpath 'com.google.gms:google-services:4.4.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -25,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         
     }
 }
