--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,8 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 28
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion rootProject.androidMinSdkVersion
@@ -14,9 +13,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -26,12 +27,10 @@ android {
     }
 
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_11
     }
-    androidExtensions {
-        experimental = true
-    }
+
     testOptions {
         animationsDisabled = true
     }
@@ -109,7 +108,7 @@ dependencies {
     androidTestImplementation testDependencies.esperesso
 
     androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.tapadoo.android:alerter:4.0.0'
 
