--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
@@ -14,8 +14,15 @@ android {
             keyAlias 'knowledge'
             keyPassword 'knowledge@prod'
         }
+        release {
+            storeFile file('../knowledge.jks')
+            storePassword 'knowledge@prod'
+            keyAlias 'knowledge'
+            keyPassword 'knowledge@prod'
+
+        }
     }
-    compileSdkVersion 28
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.applifehack.knowledge"
         minSdkVersion rootProject.androidMinSdkVersion
@@ -29,16 +36,14 @@ android {
         javaMaxHeapSize "2g"
     }
 
-    dataBinding {
-        enabled true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    androidExtensions {
-        experimental = true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     lintOptions {
@@ -57,6 +62,7 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/core_release.kotlin_module'
+        exclude 'mozilla/public-suffix-list.txt'
     }
 
     flavorDimensions "default"
@@ -64,7 +70,7 @@ android {
     productFlavors {
         mockup {
             // minSdkVersion 21
-
+           // ext.enableCrashlytics = false
             applicationId "com.applifehack.knowledge.staging"
             buildConfigField "String", "API_YOUTUBE", "\"AIzaSyCzwn_65bFMiqB1pP-yI4DvfOrR_DJN7vo\""
             buildConfigField "String", "URL_DYNAMIC_LINK", "\"https://applifehack.page.link\""
@@ -82,8 +88,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
+    namespace 'com.applifehack.knowledge'
 }
 
 dependencies {
@@ -108,7 +116,7 @@ dependencies {
     implementation appDependencies.facebook.stetho_okhttp3
     implementation appDependencies.circleImageView
     implementation 'com.makeramen:roundedimageview:2.2.1'
-
+    implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
     // Dagger
     implementation appDependencies.dagger
     implementation appDependencies.daggerAndroid
@@ -120,7 +128,7 @@ dependencies {
     // firebase-firestore
 
     implementation 'com.android.support:multidex:1.0.1'
-    implementation 'androidx.browser:browser:1.2.0'
+    implementation 'androidx.browser:browser:1.3.0-alpha04'
     //room
     implementation appDependencies.Room
     implementation appDependencies.RxRoom
@@ -150,5 +158,7 @@ repositories {
         url "https://jitpack.io"
     }
     mavenCentral()
+    jcenter()
 
 }
+apply plugin: 'com.google.gms.google-services'
