--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,22 +1,21 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 28
+    compileSdkVersion 34
 
     defaultConfig {
         minSdkVersion rootProject.androidMinSdkVersion
         targetSdkVersion rootProject.androidTargetSdkVersion
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -26,15 +25,14 @@ android {
     }
 
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_17
     }
-    androidExtensions {
-        experimental = true
-    }
+
     testOptions {
         animationsDisabled = true
     }
+    namespace 'com.ezyplanet.core'
 
 }
 
@@ -109,7 +107,7 @@ dependencies {
     androidTestImplementation testDependencies.esperesso
 
     androidTestImplementation 'androidx.test:rules:1.1.0-beta02'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.tapadoo.android:alerter:4.0.0'
 
