--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,8 +28,10 @@ ext {
     final stethoVersion = "1.5.0"
     final accountKitVersion = "4.37.0"
     final circleImageViewVersion = "2.1.0"
+    final roomVersion = "2.6.1"
 
     //firebase
+    final firebaseCoreVersion = '16.0.0'
     final firebaseIidVersion = '20.1.0'
     final firebaseMessagingVersion = '20.1.5'
     final firebaseJobdispatcherVersion = '0.8.5'
@@ -71,9 +73,9 @@ ext {
             ArchJava8            : "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version",
 
             // ROOM
-            Room                 : "androidx.room:room-runtime:$lifecycle_version",
-            RoomCompiler         : "androidx.room:room-compiler:$lifecycle_version",
-            RxRoom               : "androidx.room:room-rxjava2:$lifecycle_version",
+            Room                 : "androidx.room:room-runtime:$roomVersion",
+            RoomCompiler         : "androidx.room:room-compiler:$roomVersion",
+            RxRoom               : "androidx.room:room-rxjava2:$roomVersion",
 
 
 
