--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
 
@@ -41,8 +43,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     lintOptions {
@@ -105,15 +107,14 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    namespace 'com.applifehack.knowledge'
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':core')
     def appDependencies = rootProject.ext.dependencies
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
-        transitive = true;
-    }
+
     implementation appDependencies.play_services.analytics
     implementation appDependencies.play_services.gcm
     implementation appDependencies.play_services.auth
@@ -169,6 +170,7 @@ dependencies {
     implementation  'org.jsoup:jsoup:1.13.1'
     implementation 'it.skrape:skrapeit:1.2.2'
     implementation 'com.prof18.youtubeparser:youtubeparser:4.0.1'
+    implementation("com.google.firebase:firebase-crashlytics:18.6.0")
 
 
 
