--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
             android:theme="@style/Theme.AccountKit"
             tools:replace="android:theme" />
         <activity
+            android:exported = "true"
             android:name="com.applifehack.knowledge.ui.activity.splash.SplashActivity"
             android:noHistory="true"
             android:theme="@style/AppTheme">
@@ -99,6 +100,7 @@
 
             />
         <activity
+            android:exported = "true"
             android:name="com.applifehack.knowledge.ui.activity.home.HomeActivity"
             android:theme="@style/AppTheme"
             android:launchMode="singleTask">
@@ -130,11 +132,6 @@
             android:screenOrientation="portrait"
             />
 
-
-
-<!--        <meta-data-->
-<!--            android:name="com.google.android.gms.version"-->
-<!--            android:value="@integer/google_play_services_version" />-->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
